[DX-369] Fix Infamous Stuck plugin style

--- a/plugins-fixed/stuck.lv2/modgui/stuck.css
+++ b/plugins-fixed/stuck.lv2/modgui/stuck.css
@@ -7,7 +7,6 @@
     background-size:256px 400px;
     /*border-radius: 21px;*/
     height:400px;
-    position:absolute;
     width:256px;
     padding: 10px 10px 10px 5px;
     text-align: center;
